--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <tbody>
             </tbody>
         </table>
-        <form action="" method="get">
+        <form>
             <div class="buttons">
                 <button type="button" id="cancel">Cancel</button>
                 <button type="button" id="main-button" class="hidden-field">+ Add to Library</button>
@@ -46,7 +46,7 @@
                     <col style="width: 400px;">
                     <col style="width: 200px;">
                     <col style="width: 100px;">
-                    <col style="width: 230px">
+                    <col style="width: 230px;">
                 </colgroup>
                 <thead>
                     <tr>
@@ -76,7 +76,7 @@
                             <input type="number" id="pages" name="pages" placeholder="..." required>
                         </td>
                         <td>
-                            <select name="status" id="status">
+                            <select name="status" id="status" required aria-placeholder="">
                                 <option value="true">read</option>
                                 <option value="false">not yet read</option>
                             </select>
